--- a/Tp9/Calcul.css
+++ b/Tp9/Calcul.css
@@ -7,21 +7,24 @@ body{
     padding: 20px;
 }
 
-input.t{
-    width: 270px;
-    padding: 12px;
-    margin: 10px;
-    font-size: 1.2em;
-    border: 4px solid #e3e5e3;
-    border-radius: 8px;
-    background-color: aqua;
-    color: goldenrod;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-    transition: border 0.3s ease;
+input[type="number"]{
+    width: 250px;
+    padding: 8px;
+    border: 2px solid goldenrod;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+input[type="text"]{
+    width: 250px;
+    padding: 8px;
+    border: 2px solid goldenrod;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 button{
-    background-color: aquamarine;
+    background-color: goldenrod;
     color: white;
     padding: 12px 25px;
     margin: 10px;
@@ -33,9 +36,14 @@ button{
 }
 
 button:hover{
-    background-color: blue;
+    background-color: purple;
 }
 
 a{
     background-color: aliceblue;
+}
+
+a:hover{
+    background-color: goldenrod;
+    color: white;
 }
