--- a/atelierProMission6/mission6.css
+++ b/atelierProMission6/mission6.css
@@ -2,6 +2,7 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0px;
     padding: 0px;
+    background-color: black;
 }
 nav{
     width: 100%;
