--- a/atelier pro mission 9/quizz.css
+++ b/atelier pro mission 9/quizz.css
@@ -37,6 +37,9 @@ table{
     border-collapse: collapse;
 }
 
+button:hover{
+    background-color: gold;
+}
 
 a {
     color: white;
@@ -45,3 +48,4 @@ a {
 a:hover {
     background-color: goldenrod;
 }
+
